--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fcc-learn-npm-package-json",
   "author": "Daniel Sarmiento Cordero",
   "description": "Learning npm with fcc",
+  "keywords": ["this", "is", "freecodecamp"],
   "dependencies": {
     "express": "^4.14.0"
   },
