--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "author": "Daniel Sarmiento Cordero",
   "description": "Learning npm with fcc",
   "keywords": ["this", "is", "freecodecamp"],
+  "version": "1.0.0",
+  "license": "MIT",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "moment": "2.10.2"
   },
   "main": "server.js",
   "scripts": {
